# ai-journal-bot

./: BACKEND_GUIDE.md  main.py  pyproject.toml
static/: index.html
static/css/: styles.css
static/js/: app.js
