[project]
name = "proj-pytorch"
version = "0.1.0"
description = "AI-powered Daily Journal Bot with sentiment analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0"
]
